syntax = "proto3";
option go_package = "pkg/database";

import "google/protobuf/timestamp.proto";

message ConfigEntry {
  bytes PrivateKey = 1;
}

message RoomEntry {
  string Password = 1;
}

message UserEntry {
  string Fingerprint = 1;
  string Name = 2;
  string CurrentRoom = 3;
}

enum MessageType {
  UNKNOWN = 0;
  PUBLIC = 1;
  DIRECT = 2;
  ROOM_ANNOUNCEMENT = 3;
  ANNOUNCEMENT = 4;
}

message MessageEntry {
  MessageType Type = 1;
  google.protobuf.Timestamp Timestamp = 2;
  string Body = 3;
  string Room = 4;
  string To = 5;
  string From = 6;
}
