syntax = "proto3";
option go_package = "pkg/rpc/admin";

message Auth {
  message Request {
    string Password = 1;
  }
  message Response {
    string Error = 1;
    string SessionToken = 2;
  }
}

message ResetUserFingerprint {
  message Request {
    string SessionToken = 1;
    string Username = 2;
  }
  message Response {
    string Error = 1;
  }
}

service AdminService {
  rpc Auth(Auth.Request) returns (Auth.Response);
  rpc ResetUserFingerprint(ResetUserFingerprint.Request) returns (ResetUserFingerprint.Response);
}
